public word fetch api added
