# swagger.json
@@ -377,6 +377,89 @@
         }
       }
     },
+
+    "/levels/words": {
+      "get": {
+        "tags": ["Levels"],
+        "summary": "Get word for the user's level",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "JWT token"
+          },
+          {
+            "name": "email",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "string" }
+              },
+              "required": ["email"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Word Fetched successfully"
+          },
+          "400": {
+            "description": "Invalid data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+
+    "/levels/public/words": {
+      "get": {
+        "tags": ["Levels"],
+        "summary": "Get word for the level provided",
+        "parameters": [
+          {
+            "name": "level",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": { "type": "number" }
+              },
+              "required": ["level"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Word Fetched successfully"
+          },
+          "400": {
+            "description": "Invalid data"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/words/add": {
       "post": {
         "tags": ["Words"],
